--- a/bookmarks.html
+++ b/bookmarks.html
@@ -9,9 +9,8 @@
 <div id="column1" style="background-color:#FFFFFF;height:600px;width:670px;float:left;">
 
 <hr>
-<b>University</b><br />
+<b>Studium</b><br />
 <hr>
-<!-- <A HREF=""></A><br /> -->
 
 <A HREF="http://mathphys.fsk.uni-heidelberg.de/">MathPhys Homepage</A><br />
 <A HREF="http://mathphys.fsk.uni-heidelberg.de/portal">MathPhys Portal</A><br />
@@ -30,7 +29,7 @@
 <A HREF="about:blank">Software Engineering WS2014</A><br />
 
 <hr>
-<b>News, blogs, webcomics</b><br />
+<b>News, Blogs und Co</b><br />
 <hr>
 
 <A HREF="http://www.thekitchn.com/">The Kitchn</A><br />
@@ -38,15 +37,14 @@
 <A HREF="http://www.sproutedkitchen.com/">Sprouted Kitchen</A><br />
 <A HREF="http://www.thefirstmess.com/">The First Mess</A><br />
 <A HREF="http://www.greenkitchenstories.com/">Green Kitchen Stories</A><br />
-<A HREF="http://cookieandkate.com/">Cookie
-  and Kate</A><br />
+<A HREF="http://cookieandkate.com/">Cookie and Kate</A><br />
 </div>
 
 <div id="spacer1" style="background-color:#FFFFFF;height:600px;width:6px;float:left;"></div>
 <div id="column2" style="background-color:#FFFFFF;height:600px;width:670px;float:left;">
 
 <hr>
-<b>Projects</b><br />
+<b>Projekte</b><br />
 <hr>
 
 <A HREF="https://uberspace.de/">Uberspace</A><br />
@@ -68,6 +66,7 @@
 
 <A HREF="http://www.thespectrum.net/">Spectrum Nexus</A><br />
 <A HREF="http://feeds.fgrng.de/">Feedreader (fgrng.de)</A><br />
+<A HREF="http://www.blablacar.de/dashboard">Bla Bla Car</A><br />
 <br />
 
 </div>
